--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <title>Belajar DOM</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="root"></div>
+
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
     <script>
-        const app = document.getElementById('app');
-        const header = document.createElement('h1');
-        const headerContent = document.createTextNode('Belajar React Bareng WPU');
-
-        header.appendChild(headerContent);
-        app.appendChild(header);
+        
     </script>
 </body>
 </html>
